  (Alain Frisch, Pierre Chambart)

### Language tooling and user interface

- PR#7139: clarify the wording of Warning 38
  (Unused exception or extension constructor)
  (Gabriel Scherer)

### Tools:

- GPR#452: Make the output of ocamldep more stable
  (Alain Frisch)
- MPR#7248: have ocamldep interpret -open arguments in left-to-right order
  (Gabriel Scherer, report by Anton Bachin)

### Standard library:

- GPR#427: Obj.is_block is now an inlined OCaml function instead of a
  C external.  This should be faster.
  (Demi Obenour)

- PR#4747, GPR#328: Optimize Hashtbl by using in-place updates of its
  internal bucket lists.  All operations run in constant stack size
  and are usually faster, except Hashtbl.copy which can be much
  slower
  (Alain Frisch)
  
- PR#6279, GPR#553: implement Set.map
  (Gabriel Scherer)

- GPR#473: Provide `Sys.backend_type` so that user can write backend-specific
  code in some cases (for example,  code generator).
  (Hongbo Zhang)

- PR#6820, GPR#560: Add Obj.reachable_words to compute the
  "transitive" heap size of a value
  (Alain Frisch, review by Marc Shinwell and Damien Doligez)

### Manual:

- PR#7245, GPR#565: clarification to the wording and documentation
  of Warning 52 (fragile constant pattern)
  (Gabriel Scherer, William, Adrien Nader, Jacques Garrigue)

### Build system:

- GPR#324: Compiler developpers only: Adding new primitives to the
  standard runtime doesn't require anymore to run `make bootstrap`
  (François Bobot)

- GPR#384: Fix compilation using old Microsoft C Compilers not
  supporting secure CRT functions (SDK Visual Studio 2005 compiler and
  earlier) and standard 64-bit integer literals (Visual Studio .NET
  2002 and earlier)
  (David Allsopp)

- GPR#507: More sharing between Unix and Windows makefiles
  (whitequark, review by Alain Frisch)

### Bug fixes:

- PR#7112: Aliased arguments ignored for equality of module types

### Other libraries:
