@@ -246,6 +246,9 @@ Print version string and exit.
 \item["-vnum"]
 Print short version number and exit.
 
+\item["-no-version"]
+Do not print the version banner at startup.
+
 \item["-w" \var{warning-list}]
 Enable or disable warnings according to the argument \var{warning-list}.
 See section~\ref{s:comp-options} for the syntax of the argument.
